cabal-version: 3.0
name:          aeson-shim
version:       0.1
maintainer:    phil.dejoux@blockscope.com
copyright:     © 2022-2023 Block Scope Limited
license:       MPL-2.0
license-file:  LICENSE

library
  ghc-options:      -Wall
  build-depends:
    , base
    , text
    , unordered-containers

  hs-source-dirs:   src
  exposed-modules:  Data.Aeson.Shim
  default-language: Haskell2010

  if impl(ghc <9)
    build-depends: aeson <2

  else
    build-depends: aeson >=2
